reverted to successful JSON for UX feedback

--- a/barGraph.html
+++ b/barGraph.html
@@ -8,7 +8,7 @@
   <link href="barGraph.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-  <p id="monthTitle">Expenses by Month: <span>January</span></p>
+  <p id="monthTitle">Expenses by Month: <span>January</span> (Click and graph pauses)</p>
   <script src="http://d3js.org/d3.v3.min.js"></script>
   <script src="barGraph-FINISHED.js"></script>
 </body>
