figuring out async/await issue with category labels

--- a/barGraph.html
+++ b/barGraph.html
@@ -11,5 +11,6 @@
   <p id="monthTitle">Expenses by Month: <span>January</span> (Click and graph pauses)</p>
   <script src="http://d3js.org/d3.v3.min.js"></script>
   <script src="barGraph-FINISHED.js"></script>
+  <!-- <script src="temp.js"></script> -->
 </body>
 </html>
