--- a/index.html
+++ b/index.html
@@ -22,8 +22,6 @@
   </footer>
 
   <script src="http://d3js.org/d3.v3.min.js"></script>
-  <!-- <script src="barGraph-FINISHED.js"></script> -->
-  <script src="barGraph-EDIT.js"></script>
-  <!-- <script src="temp.js"></script> -->
+  <script src="barGraph-FINISHED.js"></script>
 </body>
 </html>
