--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   </footer>
 
   <script src="http://d3js.org/d3.v3.min.js"></script>
-  <script src="barGraph-FINISHED.js"></script>
+  <script src="barGraph-OTHER.js"></script>
+  <script src="barGraph-START2.js"></script>
 </body>
 </html>
