--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
 
   <script src="http://d3js.org/d3.v3.min.js"></script>
   <script src="scripts/barGraph-OTHER.js"></script>
-  <script src="scripts/barGraph-START2.js"></script>
+  <script src="scripts/barGraph-START.js"></script>
 </body>
 </html>
